--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1935,6 +1935,7 @@ ar:
   supplier: "المورد"
   product_name: "اسم المنتج"
   product_description: "وصف المنتج"
+  shipping_categories: "فئات الشحن"
   units: "حجم الوحدة"
   coordinator: "منسق"
   distributor: "الموزع"
@@ -2031,6 +2032,7 @@ ar:
   remove_tax: "إزالة الضريبة"
   first_name_begins_with: "الاسم الأول يبدأ بـ"
   last_name_begins_with: "اسم العائلة يبدأ بـ"
+  new_order: "طلب جديد"
   enterprise_tos_link: "شروط المؤسسة لخدمة الرابط"
   enterprise_tos_message: "نريد العمل مع أشخاص يشاركوننا أهدافنا وقيمنا. على هذا النحو ، نطلب من المؤسسات الجديدة الموافقة على"
   enterprise_tos_link_text: "شروط الخدمة."
