--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1963,6 +1963,7 @@ ca:
   supplier: "Proveïdora"
   product_name: "Nom del producte"
   product_description: "Descripció del producte"
+  shipping_categories: "Tipus d'enviament"
   units: "Mida d'unitat"
   coordinator: "Coordinador"
   distributor: "Distribuïdora"
@@ -2059,6 +2060,7 @@ ca:
   remove_tax: "Suprimeix comissions"
   first_name_begins_with: "El nom comença amb"
   last_name_begins_with: "El cognom comença amb"
+  new_order: "Nova comanda"
   enterprise_tos_link: "Enllaç a les condicions d'ús de l'organització"
   enterprise_tos_message: "Volem treballar amb persones que comparteixen els nostres objectius i valors. Com a tal, demanem a les noves organitzacions que acceptin la nostra"
   enterprise_tos_link_text: "Termes del servei."
