--- a/config/locales/fil_PH.yml
+++ b/config/locales/fil_PH.yml
@@ -1937,6 +1937,7 @@ fil_PH:
   supplier: "Supplier"
   product_name: "pangalan ng produkto"
   product_description: "paglalarawan ng produkto"
+  shipping_categories: "mga kategorya ng pagpapadala"
   units: "laki kada yunit"
   coordinator: "coordinator"
   distributor: "Distributor"
@@ -2033,6 +2034,7 @@ fil_PH:
   remove_tax: "alisin ang tax"
   first_name_begins_with: "ang pangalan ay nagsisimula sa"
   last_name_begins_with: "ang apelyido ay nagsisimula sa"
+  new_order: "bagong order"
   enterprise_tos_link: "Link para sa palatuntunan ng serbisyo ng Enterprise"
   enterprise_tos_message: "nais naming makiisa sa mga taong kapareho ng aming layunin at adhikain. Dahil dito, hinihiling namin sa mga bagong enterprise na sumang-ayon sa aming"
   enterprise_tos_link_text: "Mga Tuntunin ng Serbisyo."
