--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -1957,6 +1957,7 @@ nb:
   supplier: "Leverandør"
   product_name: "Produktnavn"
   product_description: "Produktbeskrivelse"
+  shipping_categories: "Fraktkategorier"
   units: "Enhetsstørrelse"
   coordinator: "Koordinator"
   distributor: "Distributør"
@@ -2053,6 +2054,7 @@ nb:
   remove_tax: "Fjern avgift"
   first_name_begins_with: "Fornavn begynner med"
   last_name_begins_with: "Etternavn begynner med"
+  new_order: "Ny bestilling"
   enterprise_tos_link: "Lenke til Tjenestevilkår for Bedrifter"
   enterprise_tos_message: "Vi ønsker å jobbe med bedrifter som deler våre mål og verdier. Derfor ber vi nye bedrifter om å godta vår"
   enterprise_tos_link_text: "Tjenestevilkår."
