--- a/config/locales/nl_BE.yml
+++ b/config/locales/nl_BE.yml
@@ -1891,6 +1891,7 @@ nl_BE:
   supplier: "Leverancier"
   product_name: "Naam produkt"
   product_description: "Beschrijving product"
+  shipping_categories: "Verzendingscategorieën"
   units: "Stukgrootte"
   coordinator: "Coördinator"
   distributor: "Distributeur"
@@ -1986,6 +1987,7 @@ nl_BE:
   remove_tax: "Verwijder belasting"
   first_name_begins_with: "Voornaam begint met"
   last_name_begins_with: "Familienaam begint met "
+  new_order: "Nieuwe bestelling"
   enterprise_tos_link: "Link Voorwaarden Onderneming"
   enterprise_tos_message: "We willen met mensen werken die onze normen en waarden en delen. Daarom vragen wij aan de nieuwe bedrijven akkoord te gaan met onze  "
   enterprise_tos_link_text: "Dienstvoorwaarden"
