--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1864,6 +1864,7 @@ pt:
   supplier: "Fornecedor"
   product_name: "Nome do Produto"
   product_description: "Descrição do Produto"
+  shipping_categories: "Categorias de Envio"
   units: "Tamanho unitário"
   coordinator: "Coordenador"
   distributor: "Distribuidor"
@@ -1958,6 +1959,7 @@ pt:
   remove_tax: "Remover imposto"
   first_name_begins_with: "Primeiro nome começa com"
   last_name_begins_with: "Último nome começa com"
+  new_order: "Nova Encomenda"
   enterprise_tos_link: "Ligação para Termos de Serviço da Organização"
   enterprise_tos_message: "Queremos trabalhar com pessoas que partilham os nossos objectivos e valores. Por isso pedimos às organizações novas que concordem com os nossos"
   enterprise_tos_link_text: "Termos de Serviço."
