--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -1957,6 +1957,7 @@ pt_BR:
   supplier: "Fornecedor"
   product_name: "Nome do Produto"
   product_description: "Descrição do Produto"
+  shipping_categories: "Categorias de Remessa"
   units: "Unidade de medida"
   coordinator: "Coordenador"
   distributor: "Distribuidor"
@@ -2053,6 +2054,7 @@ pt_BR:
   remove_tax: "Remover taxa"
   first_name_begins_with: "O primeiro nome começa com"
   last_name_begins_with: "O sobrenome começa com"
+  new_order: "Novo Pedido"
   enterprise_tos_link: "Link de Termos de Serviço da iniciativa"
   enterprise_tos_message: "Queremos trabalhar com pessoas que compartilham nossos objetivos e valores. Como tal, pedimos às novas iniciativas que concordem com nossos"
   enterprise_tos_link_text: "Termos de Serviço."
