--- a/config/locales/en_ZA.yml
+++ b/config/locales/en_ZA.yml
@@ -1947,6 +1947,7 @@ en_ZA:
   supplier: "Supplier"
   product_name: "Product Name"
   product_description: "Product Description"
+  shipping_categories: "Shipping Categories"
   units: "Unit Size"
   coordinator: "Coordinator"
   distributor: "Distributor"
@@ -2043,6 +2044,7 @@ en_ZA:
   remove_tax: "Remove tax"
   first_name_begins_with: "First name begins with"
   last_name_begins_with: "Surname begins with"
+  new_order: "New Order"
   enterprise_tos_link: "Enterprise Terms of Service link"
   enterprise_tos_message: "We want to work with people that share our aims and values. As such we ask new enterprises to agree to our "
   enterprise_tos_link_text: "Terms of Service."
