--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1153,7 +1153,7 @@ fr:
       cart:
         cart: "Panier"
       cart_sidebar:
-        checkout: "Etape suivante (coordonnées)"
+        checkout: "Etape suivante"
         edit_cart: "Modifier le panier"
         items_in_cart_singular: "%{num} élément dans le panier"
         items_in_cart_plural: "%{num} éléments dans le panier"
@@ -1962,6 +1962,7 @@ fr:
   supplier: "Fournisseur"
   product_name: "Nom du Produit"
   product_description: "Description du Produit"
+  shipping_categories: "Conditions de transport"
   units: "Unité de mesure"
   coordinator: "Coordinateur"
   distributor: "Distributeur"
@@ -2058,6 +2059,7 @@ fr:
   remove_tax: "Retirer TVA"
   first_name_begins_with: "Prénom commence par"
   last_name_begins_with: "Nom de famille commence par"
+  new_order: "Nouvelle commande"
   enterprise_tos_link: "Lien vers les Conditions Générales d'Utilisation"
   enterprise_tos_message: "Nous soutenons la mise en place d'un système alimentaire résilient et durable, et souhaitons œuvrer avec des entreprises qui partagent nos valeurs et notre vision. Ainsi, nous demandons aux entreprises s'enregistrant sur Open Food France de valider nos "
   enterprise_tos_link_text: "Conditions d'utilisation"
