--- a/config/locales/fr_BE.yml
+++ b/config/locales/fr_BE.yml
@@ -1940,6 +1940,7 @@ fr_BE:
   supplier: "Fournisseurs"
   product_name: "Nom du Produit"
   product_description: "Description du Produit"
+  shipping_categories: "Condition de transport"
   units: "Unité de mesure"
   coordinator: "Coordinateur"
   distributor: "Distributeur"
@@ -2036,6 +2037,7 @@ fr_BE:
   remove_tax: "Retirer TVA"
   first_name_begins_with: "Début du prénom"
   last_name_begins_with: "Début du nom de famille"
+  new_order: "Nouvelle commande"
   enterprise_tos_link: "Lien vers les Conditions Générales d'Utilisation"
   enterprise_tos_message: "Nous soutenons la mise en place d'un système alimentaire résilient et durable, et souhaitons œuvrer avec des acteurs et actrices qui partagent nos valeurs et notre vision. Ainsi, nous demandons aux acteurs s'enregistrant sur Open Food Network de valider nos "
   enterprise_tos_link_text: "Conditions d'utilisation"
