--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -14,6 +14,7 @@ it:
       spree/payment:
         amount: Quantità
         state: Stato
+        source: Fonte
       spree/product:
         primary_taxon: "Categoria Prodotto"
         supplier: "Fornitore"
@@ -183,6 +184,7 @@ it:
         explainer: L'elaborazione automatica di queste gentili richieste non è riuscita per una ragione sconosciuta. Questo non dovrebbe accadere, ti preghiamo di contattarci se visualizzi questo messaggio.
   home: "OFN"
   title: "Open Food Network"
+  welcome_to: "Benvenuto su"
   site_meta_description: "Cominciamo da zero. Con i produttori e gli allevatori pronti a raccontare le loro storie, sinceramente e orgogliosamente. Con i distributori pronti a connettere le persone con i prodotti in modo giusto ed equo. Con i compratori che credono che migliori decisioni per l'acquisto settimanale possano..."
   search_by_name: Cerca per nome o zona...
   producers_join: I Produttori sono ora invitati ad unirsi ad Open Food Network
@@ -1151,7 +1153,11 @@ it:
         cart: "Carrello"
       cart_sidebar:
         checkout: "Paga"
+        edit_cart: "Modifica il carrello"
+        items_in_cart_singular: "%{num} articolo nel tuo carrello"
+        items_in_cart_plural: "%{num} articoli nel tuo carrello"
         close: "Chiuso"
+        cart_empty: "Il tuo carrello è vuoto"
       signed_in:
         profile: "Profilo"
       mobile_menu:
@@ -1710,6 +1716,7 @@ it:
   remember_me: Ricordami
   are_you_sure: "Sei sicuro?"
   orders_open: "Richieste aperte"
+  closing: "In chiusura"
   going_back_to_home_page: "Reindirizzamento alla homepage"
   creating: In creazione
   updating: In aggiornamento
@@ -1953,6 +1960,7 @@ it:
   supplier: "Fornitore"
   product_name: "Nome Prodotto"
   product_description: "Descrizione prodotto"
+  shipping_categories: "Categorie Spedizioni"
   units: "Unità di misura"
   coordinator: "Coordinatore"
   distributor: "Distributore"
@@ -2049,6 +2057,7 @@ it:
   remove_tax: "Rimuovi tassa"
   first_name_begins_with: "Il nome inizia con"
   last_name_begins_with: "Il cognome inizia con"
+  new_order: "Nuovo ordine"
   enterprise_tos_link: "link Termini di Servizio Aziende"
   enterprise_tos_message: "Abbiamo bisogno di lavorare con persone che condividono i nostri scopi e i nostri valori. Per questo chiediamo alle nuove aziende di sottoscrivere i nostri"
   enterprise_tos_link_text: "Termini di Servizio"
@@ -2067,6 +2076,7 @@ it:
   hub_sidebar_at_least: "Almeno un hub deve essere selezionato"
   hub_sidebar_blue: "blu"
   hub_sidebar_red: "rosso"
+  order_cycles_closed_for_hub: "L'hub che hai selezionato è temporaneamente chiuso. Riprova più tardi."
   report_customers_distributor: "Distributore"
   report_customers_supplier: "Fornitore"
   report_customers_cycle: "Ciclo di richieste"
@@ -2303,6 +2313,7 @@ it:
   order_cycles_email_to_producers_notice: 'Le email da inviare ai produttori sono state messe in coda per l''invio.'
   order_cycles_no_permission_to_coordinate_error: "Nessuna delle tue aziende ha il permesso di coordinare un ciclo di richieste"
   order_cycles_no_permission_to_create_error: "Non hai il permesso di creare un ciclo di richieste coordinato da questa azienda"
+  order_cycle_closed: "Il ciclo di richieste che hai selezionato è appena chiuso. Riprova per favore!"
   back_to_orders_list: "Indietro alla lista delle gentili richieste"
   no_orders_found: "Nessuna gentile richiesta trovata"
   order_information: "Informazioni Gentile Richiesta"
