--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1395,6 +1395,8 @@ en:
   cart_updating: "Updating cart..."
   cart_empty: "Cart empty"
   cart_edit: "Edit your cart"
+  item: "Item"
+  qty: "Qty"
 
   card_number: Card Number
   card_securitycode: "Security Code"
