--- a/config/locales/en_BE.yml
+++ b/config/locales/en_BE.yml
@@ -1252,6 +1252,8 @@ en_BE:
   cart_updating: "Updating cart..."
   cart_empty: "Cart empty"
   cart_edit: "Edit your cart"
+  item: "Item"
+  qty: "Qty"
   card_number: Card Number
   card_securitycode: "Security Code"
   card_expiry_date: Expiry Date
