--- a/config/locales/en_DE.yml
+++ b/config/locales/en_DE.yml
@@ -1262,6 +1262,8 @@ en_DE:
   cart_updating: "Updating cart..."
   cart_empty: "Cart empty"
   cart_edit: "Edit your cart"
+  item: "Item"
+  qty: "Qty"
   card_number: Card Number
   card_securitycode: "Security Code"
   card_expiry_date: Expiry Date
