--- a/config/locales/en_NZ.yml
+++ b/config/locales/en_NZ.yml
@@ -1310,6 +1310,8 @@ en_NZ:
   cart_updating: "Updating cart..."
   cart_empty: "Cart empty"
   cart_edit: "Edit your cart"
+  item: "Item"
+  qty: "Qty"
   card_number: Card Number
   card_securitycode: "Security Code"
   card_expiry_date: Expiry Date
