--- a/config/locales/en_PH.yml
+++ b/config/locales/en_PH.yml
@@ -1293,6 +1293,8 @@ en_PH:
   cart_updating: "Updating cart..."
   cart_empty: "Cart empty"
   cart_edit: "Edit your cart"
+  item: "Item"
+  qty: "Qty"
   card_number: Card Number
   card_securitycode: "Security Code"
   card_expiry_date: Expiry Date
