--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -690,6 +690,7 @@ en:
           acn_placeholder: eg. 123 456 789
           display_invoice_logo: Display logo in invoices
           invoice_text: Add customized text at the end of invoices
+          terms_and_conditions: "Terms and Conditions"
         contact:
           name: Name
           name_placeholder: eg. Gustav Plum
@@ -2433,6 +2434,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
   enterprise_name_error: "has already been taken. If this is your enterprise and you would like to claim ownership, or if you would like to trade with this enterprise please contact the current manager of this profile at %{email}."
   enterprise_owner_error: "^%{email} is not permitted to own any more enterprises (limit is %{enterprise_limit})."
   enterprise_role_uniqueness_error: "^That role is already present."
+  enterprise_terms_and_conditions_type_error: "Only PDFs are allowed"
   inventory_item_visibility_error: must be true or false
   product_importer_file_error: "error: no file uploaded"
   product_importer_spreadsheet_error: "could not process file: invalid filetype"
