Allow user to remove terms and conditions file

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1207,6 +1207,8 @@ en:
       destroy_attachment_does_not_exist: "Logo does not exist"
     enterprise_promo_image:
       destroy_attachment_does_not_exist: "Promo image does not exist"
+    enterprise_terms_and_conditions:
+      destroy_attachment_does_not_exist: "Terms and Conditions file does not exist"
     orders:
       failed_to_update: "Failed to update order"
 
@@ -2705,6 +2707,8 @@ See the %{link} to find out more about %{sitename}'s features and to start using
             immediate_logo_removal_warning: "The logo will be removed immediately after you confirm."
             removed_promo_image_successfully: "Promo image removed successfully"
             immediate_promo_image_removal_warning: "The promo image will be removed immediately after you confirm."
+            immediate_terms_and_conditions_removal_warning: "The Terms and Conditions file will be removed immediately after you confirm."
+            removed_terms_and_conditions_successfully: "Terms and Conditions file removed successfully"
     insufficient_stock: "Insufficient stock available, only %{on_hand} remaining"
     out_of_stock:
       reduced_stock_available: Reduced stock available
