--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -14,6 +14,7 @@ pt_BR:
       spree/payment:
         amount: Montante
         state: Estado
+        source: Origem
       spree/product:
         primary_taxon: "Categoria de Produto"
         supplier: "Fornecedor"
@@ -272,6 +273,9 @@ pt_BR:
   on hand: "Disponível"
   ship: "Envio"
   shipping_category: "Tipos de Frete"
+  height: "Altura"
+  width: "Largura"
+  depth: "Profundidade"
   actions:
     create_and_add_another: "Criar e adicionar outro"
     create: "Criar"
@@ -1013,7 +1017,7 @@ pt_BR:
         name: Relatórios de pagamento
         description: Relatórios para pagamentos
       orders_and_fulfillment:
-        name: Relatórios de pedidos e de satisfação
+        name: Relatórios de pedidos e fechamento
       customers:
         name: Clientes
       products_and_inventory:
@@ -1036,6 +1040,9 @@ pt_BR:
     subscriptions:
       index:
         title: "Assinaturas"
+        new: "Nova Assinatura"
+      new:
+        title: "Nova Assinatura"
       edit:
         title: "Editar assinatura"
       table:
@@ -1060,6 +1067,8 @@ pt_BR:
         create_at_least_one_schedule_step_3: 3. Clique em "Novo cronograma" e preencha o formulário
         once_you_are_done_you_can_html: Quando terminar, você pode %{reload_this_page_link}
         reload_this_page: recarregar esta página
+      form:
+        create: "Criar Assinatura"
       steps:
         details: 1. Detalhes Básicos
         address: 2. Endereço
@@ -1206,14 +1215,14 @@ pt_BR:
   invoice_column_price_without_taxes: "Preço total (sem taxas)"
   invoice_column_tax_rate: "Taxa de imposto"
   invoice_tax_total: "Total de Imposto sobre Bens e Serviços"
-  tax_invoice: "NOTA FISCAL"
+  tax_invoice: "FATURA"
   tax_total: "Total de imposto (%{rate}):"
   total_excl_tax: "Total (sem imposto):"
   total_incl_tax: "Total (com imposto):"
   abn: "CNPJ"
   acn: "CNPJ:"
-  invoice_issued_on: "Nota fiscal emitida em:"
-  order_number: "Número da nota fiscal:"
+  invoice_issued_on: "Fatura emitida em:"
+  order_number: "Número da fatura:"
   date_of_transaction: "Dia da transação:"
   ticket_column_qty: "Qtd"
   ticket_column_item: "Ítem"
@@ -1526,7 +1535,7 @@ pt_BR:
   shopping_contact_social: "Seguir"
   shopping_groups_part_of: "é parte de:"
   shopping_producers_of_hub: "produtores de %{hub}:"
-  enterprises_next_closing: "Próximo fechamento de pedido"
+  enterprises_next_closing: "Próximo fechamento"
   enterprises_ready_for: "Pronto para"
   enterprises_choose: "Escolha para quando você quer seu pedido:"
   maps_open: "Aberto"
@@ -1960,6 +1969,7 @@ pt_BR:
   supplier: "Fornecedor"
   product_name: "Nome do Produto"
   product_description: "Descrição do Produto"
+  permalink: "Permalink"
   shipping_categories: "Categorias de Remessa"
   units: "Unidade de medida"
   coordinator: "Coordenador"
@@ -2057,6 +2067,7 @@ pt_BR:
   remove_tax: "Remover taxa"
   first_name_begins_with: "O primeiro nome começa com"
   last_name_begins_with: "O sobrenome começa com"
+  shipping_method: "Método de Envio"
   new_order: "Novo Pedido"
   enterprise_tos_link: "Link de Termos de Serviço da iniciativa"
   enterprise_tos_message: "Queremos trabalhar com pessoas que compartilham nossos objetivos e valores. Como tal, pedimos às novas iniciativas que concordem com nossos"
@@ -3065,7 +3076,7 @@ pt_BR:
           email: "Email do cliente"
         invoice:
           issued_on: "Emitida em"
-          tax_invoice: "NOTA FISCAL"
+          tax_invoice: "FATURA"
           code: "Código"
           from: "De"
           to: "Informações de cobrança"
@@ -3373,6 +3384,11 @@ pt_BR:
         thanks: "Agradeço pelos seus serviços."
         track_information: "Informações de rastreamento: %{tracking}"
         track_link: "Link de rastreamento: %{url}"
+    test_mailer:
+      test_email:
+        greeting: "Parabéns!"
+        message: "Se você recebeu este email, então as suas configurações de email estão corretas."
+        subject: "Email Teste"
     order_state:
       address: endereço
       adjustments: ajustes
