--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2912,6 +2912,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
   payments: "Payments"
   return_authorizations: "Return Authorizations"
   credit_owed: "Credit Owed"
+  new_adjustment: "New Adjustment"
 
   payment: "Payment"
   payment_method: "Payment Method"
