--- a/config/locales/fr_BE.yml
+++ b/config/locales/fr_BE.yml
@@ -711,6 +711,8 @@ fr_BE:
           enable_subscriptions_tip: "Activer la fonction abonnements?"
           enable_subscriptions_false: "Désactivé"
           enable_subscriptions_true: "Activé"
+          customer_names_false: "Désactivé"
+          customer_names_true: "Activé"
           shopfront_message: "Message d'accueil comptoir ouvert"
           shopfront_message_placeholder: >
               Un message facultatif pour souhaiter la bienvenue aux clients et leur
@@ -2028,7 +2030,6 @@ fr_BE:
   spree_user_enterprise_limit_error: "^ %{email} ne peut pas créer de nouvelles entreprises (limite actuelle : %{enterprise_limit} entreprises )."
   spree_variant_product_error: doit avoir au moins une variante
   your_profil_live: "Votre profil en ligne"
-  on_ofn_map: "sur la carte Open Food Network"
   see: "Voir"
   live: "en ligne"
   manage: "Gérer"
