--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -702,6 +702,8 @@ en_AU:
           enable_subscriptions_tip: "Enable subscriptions functionality?"
           enable_subscriptions_false: "Disabled"
           enable_subscriptions_true: "Enabled"
+          customer_names_false: "Disabled"
+          customer_names_true: "Enabled"
           shopfront_message: "\"Home\" message"
           shopfront_message_placeholder: >
               Create your home page content to welcome customers and explain how people
@@ -2015,7 +2017,6 @@ en_AU:
   spree_user_enterprise_limit_error: "^%{email} is not permitted to own any more enterprises (limit is %{enterprise_limit})."
   spree_variant_product_error: must have at least one variant
   your_profil_live: "Your profile live"
-  on_ofn_map: "on the Open Food Network map"
   see: "See"
   live: "live"
   manage: "Manage"
