--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3649,4 +3649,4 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     activerecord:
       models:
         spree/payment:
-          one: One
+          one: Payment
